# JsonReader

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  main.cpp
TestFolder/: sublime.json  vim.json  vscode.json
include/controller/: MainController.hpp
include/core/: DbWorker.hpp  FileTypes.hpp  FileWorker.hpp
include/core/parser/: JsonParser.hpp  XmlParser.hpp  iParser.hpp
include/model/: DataObject.hpp  TableModel.hpp
include/view/: EditDialog.hpp  ImportDialog.hpp  MainWindow.hpp
src/controller/: MainController.cpp
src/core/: DbWorker.cpp  FileWorker.cpp
src/core/parser/: JsonParser.cpp  XmlParser.cpp
src/model/: TableModel.cpp
src/view/: EditDialog.cpp  ImportDialog.cpp  MainWindow.cpp
